# Awesome-MCP-Scaffold

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_EN.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  requirements.txt  run.py
.cursor/rules/: mcp-development-guide.mdc  mcp-testing-patterns.mdc  streamable-http-production.mdc
deploy/nginx/: nginx.conf
docs/: BEST_PRACTICES.md  BEST_PRACTICES_EN.md  CURSOR_GUIDE.md  CURSOR_GUIDE_EN.md  Cursor_User_Rules.md  Cursor_User_Rules_EN.md  Cursor_settings.md  Cursor_settings_EN.md  DEVELOPMENT.md  DEVELOPMENT_EN.md  DOCKER_OPTIMIZATION.md  DOCKER_OPTIMIZATION_EN.md  GETTING_STARTED.md  GETTING_STARTED_EN.md  QUICKSTART.md  QUICKSTART_EN.md  TESTING.md  TESTING_EN.md
server/: __init__.py  config.py  main.py
server/prompts/: __init__.py  code_review.py  data_analysis.py
server/resources/: __init__.py  config_data.py  system_info.py
server/routes/: __init__.py  api_routes.py
server/tools/: __init__.py  calculator.py  file_operations.py  text_processing.py
static/: index.html
tests/: test_tools.py
